@@ -48,11 +48,11 @@ public class UpdatePageCodedQuestionSteps {
       messagingInfo = new MessagingInfo(false, null, null, null, false, null);
     } else {
       messagingInfo = new MessagingInfo(
-          "true".equals(map.get("includedInMessage").toLowerCase()),
+          "true".equalsIgnoreCase(map.get("includedInMessage")),
           map.get("messageVariableId"),
           map.get("labelInMessage"),
           map.get("codeSystem"),
-          "true".equals(map.get("requiredInMessage").toLowerCase()),
+          "true".equalsIgnoreCase(map.get("requiredInMessage")),
           map.get("hl7DataType"));
     }
 
@@ -62,7 +62,7 @@ public class UpdatePageCodedQuestionSteps {
         "true".equals(map.get("visible")),
         "true".equals(map.get("enabled")),
         "true".equals(map.get("required")),
-        Long.valueOf(map.get("displayControl")),
+        Long.parseLong(map.get("displayControl")),
         Long.valueOf(map.get("valueSet")),
         map.get("defaultValue"),
         reportingInfo,
@@ -74,7 +74,7 @@ public class UpdatePageCodedQuestionSteps {
   public void send_update_page_coded_request() throws Exception {
     WaTemplate page = pageMother.one();
     List<WaUiMetadata> content = pageMother.pageContent();
-    long id = content.get(content.size() - 1).getId();
+    long id = content.getLast().getId();
     response.active(requester.send(page.getId(), id, request));
   }
 
@@ -82,8 +82,8 @@ public class UpdatePageCodedQuestionSteps {
   public void page_coded_is_updated() throws Exception {
     response.active()
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.displayControl", equalTo(Long.valueOf(request.displayControl()).intValue())))
-        .andExpect(jsonPath("$.valueSet", equalTo(Long.valueOf(request.valueSet()).intValue())))
+        .andExpect(jsonPath("$.displayControl", equalTo((int)request.displayControl())))
+        .andExpect(jsonPath("$.valueSet", equalTo(request.valueSet().intValue())))
         .andExpect(jsonPath("$.defaultValue", equalTo(request.defaultValue())))
         .andExpect(jsonPath("$.label", equalTo(request.label())))
         .andExpect(jsonPath("$.tooltip", equalTo(request.tooltip())))
